update english cv

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,20 +1,20 @@
 en:
   address: Touken Sangubashi Mansion 303, Yoyogi 4-22-2, Shibuya, Tokyo
   skills:
-    main_language: Mainly proficient in Ruby
-    linux: Using Linux as main OS since 2008. Very comfortable in unix environments and writing bash scripts
+    main_language: Mainly proficient in Ruby and Go
+    linux: Debian & Emacs user. Very comfortable in unix environments and writing bash scripts
     aws: Extensive knowledge of AWS resources
-    ci: Proficient in Jenkins / Vagrant / Puppet / Chef Continuous Integration and Continuous Deployment tools, Git CVS
+    ci: Early adopter of Continuous Integration and Continuous Deployment. Proficient in Jenkins / GitlabCI / Travis / Docker / Vagrant / Puppet / Ansible
     method: Experience with TDD, BDD, Agile and GitHub driven development
     functional: Functional programming background
     data_science: Familiar with Data Science concepts
-    imperative: Experience writing Java, JavaScript, C++, PHP
+    imperative: Experience writing Legacy languages such as, Java, JavaScript, C++, PHP
     web_api: |
       Experience in designing and implementing Web APIs.  
-      A Ruby library for accessing Kii Cloud API can be found here (not complete)  
+      A Ruby library for accessing Kii Cloud API [can be found here](https://github.com/c0ze/KiiGem) (not complete)  
     cocos: |
       Some experience with Game development libraries such as Cocos2dx and Gosu.  
-      A Sample project written in Ruby Gosu can be found at  
+      A Sample project written in Ruby Gosu can be found [here](https://github.com/c0ze/invaderoids)  
   experience:
     front_end: Frontend Tools
     back_end: Backend Tools
@@ -23,6 +23,7 @@ en:
   projects:
     kii_sdk: |
       [Kii Ruby SDK](https://github.com/c0ze/KiiGem) (SDK written in Ruby to use Kii Cloud)
-    kii_rss: KiiRSS (RSS reader using Kii Cloud to store feeds. Static Page written in Javascript using Angular)
+    kii_rss: |
+      [KiiSS](https://github.com/c0ze/kiiss) (RSS reader using Kii Cloud to store feeds. Static Page written in Javascript using Angular)
     invaderoids: |
       [Invaderoids](https://github.com/c0ze/invaderoids), an Asteroids clone, made with gosu in Ruby
