--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -21,6 +21,8 @@ ja:
     test: テスト＆プロファイリング
     persistance: データベース
   projects:
+    iron_functions: |
+      オープンソースサーバーレスフレームワーク[Iron Functions](open.iron.io)のメインテナンス
     kii_sdk: |
       [Kii Ruby SDK](https://github.com/c0ze/KiiGem) (Rubyで書いたKii Cloudライブラリー)
     kii_rss: |
